added responsive styles

--- a/app/styles/OurServices.scss
+++ b/app/styles/OurServices.scss
@@ -22,7 +22,7 @@
 
 @media (max-width: 550px) {
     .our-services{
-        margin-top: 140px; // CRITICAL: Reduce from 150px
+        margin-top: 140px; 
         
         h1{
             font-size: 36px;
