--- a/app/styles/HeroSection.scss
+++ b/app/styles/HeroSection.scss
@@ -1,17 +1,16 @@
 .hero{
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
-     margin-top: 23px;
-     
-    &-p{
-      margin: 24px 0 50px 0;
-    }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 23px;
+  
+  &-p{
+    margin: 24px 0 50px 0;
+  }
 
-    &-left{
-        width: 50%;
-    }
-   
+  &-left{
+      width: 50%;
+  }
 }
 
 @media (max-width: 1024px) {
@@ -19,7 +18,6 @@
     
     &-left{
       width: 80%;
-      // background-color: red;
 
       h1{
       font-size: 60px;
@@ -35,12 +33,36 @@
     }
 
     img{
-      // width: 50;
       height: 600px;
-      // background-color: black;
     }
   }
+}
 
+@media (max-width: 830px) {
+    .hero{
+    display: grid;
+    margin-top: 66px;
+
+    &-left{
+      width: 100%;
+    }
+
+    h1{
+      font-size: 80px;
+    }
+
+    p{
+      width: 70%;
+    }
+
+    button{
+
+      img{
+        width: 24px;
+        height: 24px;
+      }
+    }
+  }
 }
 
 @media (max-width: 550px) {
@@ -54,9 +76,6 @@
 
     img{
       height: 400px;
-      // margin-top: 50px;
     }
-
-    
   }
 }
