--- a/app/styles/WhyEnver.scss
+++ b/app/styles/WhyEnver.scss
@@ -1,4 +1,5 @@
 .why-enver{
+
     .text{
         display: flex;
         justify-content: space-between;
@@ -16,6 +17,7 @@
 
     img{
         margin-top: 50px;
+        width: 100%;
     }
 
 }
