--- a/app/globals.scss
+++ b/app/globals.scss
@@ -105,7 +105,7 @@ button{
   font-size: 20px;
 }
 .container{
-  max-width: 90%;
+  max-width:76%;
   margin: 0 auto;
   height: fit-content;
   position: relative;
@@ -145,6 +145,12 @@ button{
   left: 130px;
 }
 
+@media (max-width: 1280px) {
+  .container{
+    max-width:94%;
+  }
+}
+
 @media (max-width: 1024px) {
   body{
     overflow-x: hidden;
@@ -154,12 +160,19 @@ button{
     width: 90%;
   }
 
+  h1{
+    line-height: 100%;
+  }
+
   .orb-5{
     top: 2600px;
     width: 800px;
     height: 1000px;
   }
 }
+
+
+
 
 @media (max-width: 830px) {
   .orb-5{
@@ -169,15 +182,14 @@ button{
 }
 
 @media (max-width: 550px) {
-  // body{
-  //   overflow-x: hidden;
-  // }
+ 
 
   .container{
     width: 90%;
 
     h1{
       font-size: 42px;
+      line-height: 42px;
     }
 
     p{
