--- a/app/styles/HeroSection.scss
+++ b/app/styles/HeroSection.scss
@@ -6,6 +6,7 @@
   
   &-p{
     margin: 24px 0 50px 0;
+    line-height: 39px;
   }
 
   &-left{
@@ -13,6 +14,7 @@
       margin-top: 70px;
   }
 }
+
 
 @media (max-width: 1024px) {
   .hero{
