--- a/app/styles/NavBar.scss
+++ b/app/styles/NavBar.scss
@@ -4,10 +4,11 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 80px;
+    padding: 30px calc(100% - 88%) 10px calc(100% - 80%);
     margin: auto;
+    top: 0;
     z-index: 12;
-    background: rgba(18, 16, 41, 0.12);
+    background: rgba(14, 12, 32, 0.4);
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.15);
@@ -39,9 +40,10 @@ nav {
     }
 }
 
-@media (max-width: 1024px) {
+
+@media (max-width: 1280px) {
     nav{
-        padding: 0px 40px ;
+        padding: 10px 40px ;
 
         .nav-links{
             width: 330px;
@@ -69,6 +71,6 @@ nav {
 
 @media (max-width: 550px) {
     nav{
-        padding: 0 20px;
+        padding: 10px 20px;
     }
 }
