--- a/app/styles/WhyEnver.scss
+++ b/app/styles/WhyEnver.scss
@@ -22,6 +22,23 @@
 
 }
 
+@media (max-width: 817px) {
+    .text{
+        flex-direction: column;
+
+        h1{
+            width: 100% !important;
+        }
+
+        p{
+            width: 100% !important;
+        }
+
+ 
+    }
+
+}
+
 @media (max-width: 550px) {
     .why-enver{
 
